dataset/local/tf_lambda_dead_letter_queue/resource.yaml
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: good-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_lambda_function
        name: my_lambda
        values:
          function_name: my-lambda-function
          runtime: python3.12
          handler: index.handler
          role: arn:aws:iam::123456789012:role/lambda-role
          dead_letter_config:
            - target_arn: "arn:aws:sqs:us-east-1:123456789012:my-dlq"
---
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: bad-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_lambda_function
        name: my_lambda
        values:
          function_name: my-lambda-function
          runtime: python3.12
          handler: index.handler
          role: arn:aws:iam::123456789012:role/lambda-role
