dataset/local/tf_lambda_dead_letter_queue/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-dead-letter-queue-config
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: check-dead-letter-queue-config
    kind: Plan
    resources:
      - good-plan
    result: pass
  - policy: check-dead-letter-queue-config
    kind: Plan
    resources:
      - bad-plan
    result: fail
